--- a/Rockets/View/index.html
+++ b/Rockets/View/index.html
@@ -15,9 +15,10 @@
                 <h1>Rocket 1</h1>
                 <a id="1" role="button" class="btn btn-primary">Create Rocket 1</a>
                 <div id="rocketInfo1" class="d-none col-lg-6">
-                    <div class="font-weight-bold">Rocket 1: 32WESSDS Engines power: 10,30,80</div>                
-                    <a role="button" class="btn btn-sm btn-primary" onclick="acelerateRocket(1)">Acelerate rocket 1</a>
-                    <a role="button" class="btn btn-sm btn-primary" onclick="breakRocket(1)">Break rocket 1</a>
+                    <div class="font-weight-bold">Rocket 1: <span id="rocketId1">32WESSDS</span></div>
+                    <div>Engines power: <span id="rocketPw1">10,30,80</span></div>                                    
+                    <a role="button" class="btn btn-sm btn-primary" onclick="acelerateRocket1()">Acelerate rocket 1</a>
+                    <a role="button" class="btn btn-sm btn-primary" onclick="breakRocket1()">Break rocket 1</a>
                     
                     <div>
                         <label for="" class="font-weight-bold">Engine Power:</label>
@@ -29,9 +30,10 @@
                 <h1>Rocket 2</h1>
                 <a id="2" role="button" class="btn btn-primary">Create Rocket 2</a>
                 <div id="rocketInfo2" class="d-none col-lg-6">
-                    <div class="font-weight-bold">Rocket 2: LDSFJA32 Engines power: 30,40,50,50,30,10</div>         
-                    <a role="button" class="btn btn-sm btn-primary" onclick="acelerateRocket(2)">Acelerate rocket 2</a>
-                    <a role="button" class="btn btn-sm btn-primary" onclick="breakRocket(2)">Break rocket 2</a>
+                    <div class="font-weight-bold">Rocket 2: <span id="rocketId2">LDSFJA32</span></div> 
+                    <div>Engines power: <span id="rocketPw2">30,40,50,50,30,10</span></div>         
+                    <a role="button" class="btn btn-sm btn-primary" onclick="acelerateRocket2()">Acelerate rocket 2</a>
+                    <a role="button" class="btn btn-sm btn-primary" onclick="breakRocket2()">Break rocket 2</a>
                     
                     <div>
                         <label for="" class="font-weight-bold">Engine Power:</label>
